@@ -1,3 +1,0 @@
-This library provides Reauth support to Google's authentication
-libraries for Python. Reauth allows using two-factor authentication for
-end-user credentials.
